--- a/index.html
+++ b/index.html
@@ -603,32 +603,36 @@
     </main>
     <footer class="footer">
       <div class="container footer__container">
-        <nav class="footer__nav">
-          <ul class="footer__list">
-            <li class="footer__item footer__item--logo">
-              <a href="#">
-                <svg class="footer__logo" width="88" height="32">
-                  <use xlink:href="img/sprite.svg#logo"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer__item">
-              <a class="footer__link" href="#">Услуги</a>
-            </li>
-            <li class="footer__item">
-              <a class="footer__link" href="#1">Абонементы</a>
-            </li>
-            <li class="footer__item">
-              <a class="footer__link" href="#3">Акции</a>
-            </li>
-            <li class="footer__item">
-              <a class="footer__link" href="#2">Тренеры</a>
-            </li>
-            <li class="footer__item">
-              <a class="footer__link" href="#">Расписание</a>
-            </li>
-          </ul>
-        </nav>
+
+          <a href="#">
+            <svg class="footer__logo footer__logo--desktop" width="88" height="32">
+              <use xlink:href="img/sprite.svg#logo"></use>
+            </svg>
+          </a>
+
+            <ul class="footer__list">
+
+              <li class="footer__item">
+                <a class="footer__link" href="#">Услуги</a>
+              </li>
+              <li class="footer__item">
+                <a class="footer__link" href="#1">Абонементы</a>
+              </li>
+              <li class="footer__item">
+                <a class="footer__link" href="#3">Акции</a>
+              </li>
+              <li class="footer__item">
+                <a class="footer__link" href="#2">Тренеры</a>
+              </li>
+              <li class="footer__item">
+                <a class="footer__link" href="#">Расписание</a>
+              </li>
+            </ul>
+          
+
+
+
+
         <div class="social">
           <a class="social__link" href="#">
             <svg class="social__icon" width="25" height="25">
